<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical">

    <include
        android:id="@+id/incBreadCrumbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/breadcrumbs" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                style="@style/h2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/currentGameRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/current" />

                <RadioButton
                    android:id="@+id/customGameRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom" />
            </RadioGroup>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/game_id" />

                    <EditText
                        android:id="@+id/gameIdEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number" >

                        <requestFocus />
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/game_set" />

                    <EditText
                        android:id="@+id/gameSetEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </TableRow>
            </TableLayout>

            <TextView
                style="@style/h2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/period" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/allTimeRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/all_time" />

                <RadioButton
                    android:id="@+id/weekRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/week" />

                <RadioButton
                    android:id="@+id/monthRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/month" />
            </RadioGroup>

            <Button
                android:id="@+id/sendRequestButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_request" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>